<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.gatech.lostandfound.MainActivity">
    <item
        android:id="@+id/home_page"
        android:orderInCategory="100"
        android:title="@string/home_page"
        />
    <item
        android:id="@+id/view_profile"
        android:orderInCategory="100"
        android:title="@string/view_profile"
        />
    <item
        android:id="@+id/go_to_potential_list"
        android:orderInCategory="100"
        android:title="@string/go_to_potential_list"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        />
</menu>
