<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/light_bone"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/step1"
        android:gravity="left"
        android:textColor="@android:color/primary_text_light"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/step1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/step1_text"
        android:gravity="left"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp" />

    <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
        android:contentDescription="@string/button_camera_description"
        android:id="@+id/button_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/camera"
        android:layout_marginBottom="10dp"
        style="?android:attr/buttonStyleSmall" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/step2"
        android:gravity="left"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/step2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/step2_text"
        android:gravity="left"
        android:textColor="@android:color/secondary_text_light"
        android:visibility="gone"
        android:textSize="20sp" />

    <Button
        android:id="@+id/turn_in_object_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/lost_and_found_button_text"
        android:layout_gravity="left"
        android:visibility="gone"/>

    <Button
        android:id="@+id/leave_object_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_object_button"
        android:layout_marginLeft="20dp"
        android:layout_gravity="left"
        android:visibility="gone"/>

    <Button
        android:id="@+id/submit_found_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:visibility="gone"/>

</LinearLayout>